<resources>
    <string name="All">All</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_req_clear_cache">Clear cache</string>
    <string name="add_req_clear_finish">"Clearing the cache
completed successfully"</string>
    <string name="add_req_clearing_cache">Clearing cache...</string>
    <string name="add_req_order_reverse">Order/Reverse</string>
    <string name="add_to">Add to</string>
    <string name="added_fail">Added failed</string>
    <string name="added_successfully">Added successfully</string>
    <string name="adding">Adding...</string>
    <string name="album_menu_delete">Delete Album</string>
    <string name="all">all</string>
    <string name="all_select">All Select</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Y1</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apr">Apr</string>
    <string name="artist_menu_delete">Delete Artist</string>
    <string name="ask_format_message">The system detected a suspected damage sector in the internal storage. Do you need to format it?</string>
    <string name="audiobook_delete">Delete</string>
    <string name="audiobook_setting_repeat_all">List loop</string>
    <string name="audiobook_setting_repeat_one">Single loop</string>
    <string name="aug">Aug</string>
    <string name="bl_connect">connected</string>
    <string name="bl_connect_dis">Not Connected</string>
    <string name="bl_connect_fail">Failed to connect</string>
    <string name="bl_connecting">connecting</string>
    <string name="bl_device_my">My Device</string>
    <string name="bl_device_other">Other Devices</string>
    <string name="bl_loading">searching</string>
    <string name="bl_pair">Pairing...</string>
    <string name="bl_state_off">Off</string>
    <string name="bl_state_off_ing">Off...</string>
    <string name="bl_state_on">On</string>
    <string name="bl_state_on_ing">On...</string>
    <string name="bl_unpair">Ignore this device?</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="book_chapter_is_first">Already the first chapter</string>
    <string name="book_chapter_is_last">Already the last chapter</string>
    <string name="book_continue_read">Continue Reading</string>
    <string name="book_delete">Delete</string>
    <string name="book_delete_fail">Delete failed</string>
    <string name="book_delete_success">Deleted successfully</string>
    <string name="book_end_of_novel">Read again?</string>
    <string name="book_last_read_time">Last read time:</string>
    <string name="book_library">Library</string>
    <string name="book_local_file">Local file</string>
    <string name="book_main_search_file">Local Files</string>
    <string name="book_mark_delete">Delete</string>
    <string name="book_mark_delete_all">Delete all</string>
    <string name="book_mark_empty">No bookmarks</string>
    <string name="book_no_bookmark">No bookmarks</string>
    <string name="book_no_record">Last read file not found</string>
    <string name="book_not_exist">Book not found</string>
    <string name="book_not_exist_file">File not found</string>
    <string name="book_only_epub_chapter">Table of contents only supports Epub</string>
    <string name="book_progress">Progress:</string>
    <string name="book_remove">Remove</string>
    <string name="book_remove_fail">Remove failed</string>
    <string name="book_remove_success">Removed successfully</string>
    <string name="book_save_mark_fail">Failed to save bookmark</string>
    <string name="book_save_mark_success">Bookmark saved successfully</string>
    <string name="book_save_repeat">Already exists. Please do not add it again.</string>
    <string name="book_save_success">Added to bookshelf successfully</string>
    <string name="book_search_title">Local Files</string>
    <string name="book_setting_chapter">Contents</string>
    <string name="book_setting_font_big">Larger</string>
    <string name="book_setting_font_small">Smaller</string>
    <string name="book_setting_mark">Bookmarks</string>
    <string name="book_setting_mark_add">+Bookmark</string>
    <string name="book_setting_mark_list">Bookmarks</string>
    <string name="book_setting_theme">Theme</string>
    <string name="book_tip_search">Searching…</string>
    <string name="book_title">E-book</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness">Brightness</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="cancel">Cancel</string>
    <string name="cancle">No</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collection_succeeded">Added to bookmark list</string>
    <string name="confirm">Yes</string>
    <string name="date">Date</string>
    <string name="dec">Dec</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="deleted_count">deleted count:</string>
    <string name="deleting">Deleting...</string>
    <string name="dialog_bl_disconnect">Disconnect?</string>
    <string name="dialog_confirm_shutdown">Sure to shut down?</string>
    <string name="dialog_eq_reset">Reset</string>
    <string name="dialog_eq_reset_title">Reset the EQ setting value to the default value？</string>
    <string name="dialog_fm_delete_band">Sure to delete this channel?</string>
    <string name="dialog_fm_search">Start automatic channel search now？</string>
    <string name="dialog_fm_search_ing">Auto searching for channels</string>
    <string name="dialog_give">Give up</string>
    <string name="dialog_no">No</string>
    <string name="dialog_open_fm">Init Fm...</string>
    <string name="dialog_try">Try again</string>
    <string name="dialog_yes">Yes</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_dance">Dance</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_folk">Folk</string>
    <string name="eq_preset_heavymetal">Heavy Metal</string>
    <string name="eq_preset_hiphop">Hip Hop</string>
    <string name="eq_preset_jazz">Jazz</string>
    <string name="eq_preset_normal">Normal</string>
    <string name="eq_preset_pop">Pop</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feb">Feb</string>
    <string name="first_use_tips">是否进行自动搜台？</string>
    <string name="fm_again_search">Again Search Radio Station</string>
    <string name="fm_audio_output">Audio output</string>
    <string name="fm_menu_frequency_area">Frequency range</string>
    <string name="fm_menu_frequency_list">Channel list</string>
    <string name="fm_menu_frequency_list_collect">Favorite channel list</string>
    <string name="fm_menu_search_frequency">Re-search channel</string>
    <string name="fm_not_search">No Frequency Available</string>
    <string name="fm_output_headset">Headset</string>
    <string name="fm_output_speaker">Speaker</string>
    <string name="fm_pause">Pause</string>
    <string name="fm_play">Play</string>
    <string name="fm_present">present</string>
    <string name="fm_ranges_america">America</string>
    <string name="fm_ranges_asia">Asia</string>
    <string name="fm_ranges_australia">Australia</string>
    <string name="fm_ranges_europe">Europe</string>
    <string name="fm_ranges_japan">Japan</string>
    <string name="fm_recording">Record fm</string>
    <string name="fm_recording_error_internal">Recorder internal error occur</string>
    <string name="fm_recording_error_nosdcard">SD card is not ready</string>
    <string name="fm_recording_error_notenough">SD card space is insufficient</string>
    <string name="fm_recording_error_notwrite">SD card cannot be written</string>
    <string name="fm_recording_save">Save current recording?</string>
    <string name="fm_recording_save_to">File saved to</string>
    <string name="fm_search">"Re-search Channel "</string>
    <string name="fm_search_timeout">Search Timeout!</string>
    <string name="fm_search_to">Search to:</string>
    <string name="fm_searching">Searching...</string>
    <string name="fm_sound_recording">Recording</string>
    <string name="fm_speaker_bl">The speaker cannot be turned on while the Bluetooth connection is in progress!</string>
    <string name="format">Format</string>
    <string name="fri">Fri</string>
    <string name="friday">Friday</string>
    <string name="genre_album">album</string>
    <string name="genre_albums">albums</string>
    <string name="mon">Mon</string>
    <string name="repeat">Repeat</string>
    <string name="sat">Sat</string>
    <string name="shuffle">Shuffle</string>
    <string name="speed">Speed</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="time">Time</string>
    <string name="time_format">24 hour clock</string>
    <string name="time_in_title">Time in Title</string>
    <string name="timing">time off</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
</resources>