<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff0f5fb" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="6.0dip" app:cardBackgroundColor="@color/white" app:cardCornerRadius="15.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="6.0dip" android:layout_weight="1.0" app:cardBackgroundColor="@color/white" app:cardCornerRadius="15.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip">
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sun" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/mon" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tue" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/wed" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/thu" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fri" android:layout_weight="1.0" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sat" android:layout_weight="1.0" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:textSize="18.0sp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/recyclerView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="40.0dip" app:cardBackgroundColor="@color/white" app:cardCornerRadius="15.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_day" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </androidx.cardview.widget.CardView>
</LinearLayout>