<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_title" android:background="@drawable/item_selected_no_arrow" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="75.0dip">
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:id="@id/tv_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/bluetooth" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/tv_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="20.0dip" />
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/bl_loading" />
    <androidx.core.widget.NestedScrollView android:id="@id/layout_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/bl_device_my" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_my_device" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/bl_device_other" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_other_device" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>