<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/invisible_view" android:layout_width="0.0dip" android:layout_height="fill_parent" app:layout_constraintHorizontal_weight="3.0" app:layout_constraintLeft_toRightOf="@id/date_ll" app:layout_constraintRight_toRightOf="parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/date_ll" android:layout_width="@dimen/setting_width" android:layout_height="fill_parent" app:layout_constraintHorizontal_weight="4.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/invisible_view">
        <LinearLayout android:orientation="horizontal" android:id="@id/item0" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/item_ltv0" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/date" android:layout_weight="1.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="end|center" android:layout_gravity="center_vertical" android:id="@id/item_rtv0" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="MM/DD/YY" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/item1" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/item_ltv1" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time" android:layout_weight="1.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="end|center" android:layout_gravity="center_vertical" android:id="@id/item_rtv1" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="HH/MM AM" android:layout_weight="1.2" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/item2" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/item_ltv2" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time_format" android:layout_weight="4.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="end|center" android:id="@id/item_rtv2" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Off" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/item3" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/item_ltv3" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time_in_title" android:layout_weight="4.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="end|center" android:id="@id/item_rtv3" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Off" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/show_time" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintLeft_toRightOf="@id/date_ll" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/imageView" android:layout_width="160.0dip" android:layout_height="150.0dip" android:src="@drawable/icon_setting_day" app:layout_constraintBottom_toTopOf="@id/show_date" app:layout_constraintLeft_toRightOf="@id/date_ll" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/show_time" />
    <TextView android:textSize="45.0sp" android:textColor="@color/white" android:id="@id/show_day" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/imageView" app:layout_constraintEnd_toEndOf="@id/imageView" app:layout_constraintStart_toStartOf="@id/imageView" app:layout_constraintTop_toTopOf="@id/imageView" app:layout_constraintVertical_bias="0.7" />
    <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/show_date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/date_ll" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>